# AdventOfCode2020

./: .gitignore  CMakeLists.txt  day1.cpp  day1.h  day1.hpp  day2.cpp  day2.hpp  day3.cpp  day3.h  day4.cpp  day4.h  day5  day5.cpp  day6.cpp  day6.h  macros  macros.cpp  main.cpp
inputs/: day4debug.txt
